# market_scout

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: deep-dive.md  scan.md
config/: exclusions.yaml  rubric.yaml  seeds.yaml  sources.yaml
docs/superpowers/plans/: 2026-05-23-market-scout.md
docs/superpowers/specs/: 2026-05-23-market-scout-design.md
scout/: __main__.py  cli.py  filters.py  io.py  scoring.py
scout/sources/: _apify.py  base.py  g2.py  hackernews.py  quora.py  reddit.py  trends.py
tests/: test_apify_helper.py  test_cli.py  test_filters.py  test_g2.py  test_hackernews.py  test_io.py  test_quora.py  test_reddit.py  test_scoring.py  test_trends.py
