[project]
name = "market-scout"
version = "0.1.0"
description = "Personal market research agent — Hormozi four-criteria scan + deep-dive"
requires-python = ">=3.11"
dependencies = [
    "pytrends>=4.9.2",
    "PyYAML>=6.0.1",
    "python-dotenv>=1.0.1",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scout"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
